user change password (logged in) and user update

--- a/config.env
+++ b/config.env
@@ -6,7 +6,7 @@ DATABASE_PASSWORD=RGp4OUmQoakq161K
 JWT_SECRET=ITJhLrbPOdVOnojzqnIjaYoTiTxPciBLTAbsCNPbsbedroJBbY
 JWT_EXPIRES_IN=3d
 
-EMAIL_USERNAME=
-EMAIL_PASSWORD=
-EMAIL_HOST=smtp.mailtrap.io
-EMAIL_PORT=25
+EMAIL_USERNAME=5176bc8c639da9
+EMAIL_PASSWORD=1b2d462c172e89
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=2525
