create tour model with connection to user

--- a/config.env
+++ b/config.env
@@ -4,7 +4,8 @@ DATABASE=mongodb+srv://mzadlo:<PASSWORD>@clusterfornatours.6ltwlib.mongodb.net/n
 DATABASE_PASSWORD=RGp4OUmQoakq161K
 
 JWT_SECRET=ITJhLrbPOdVOnojzqnIjaYoTiTxPciBLTAbsCNPbsbedroJBbY
-JWT_EXPIRES_IN=3d
+JWT_EXPIRES_IN=30d
+JWT_COOKIE_EXPIRES_IN=30
 
 EMAIL_USERNAME=5176bc8c639da9
 EMAIL_PASSWORD=1b2d462c172e89
