--- a/package.json
+++ b/package.json
@@ -4,15 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon server.js",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js"
+    "debug": "ndb server.js",
+    "build": "parcel build server.js --out-dir dist"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@netlify/functions": "^2.8.2",
+    "@types/express": "^5.0.0",
     "bcryptjs": "^2.4.3",
+    "compression": "^1.7.4",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-mongo-sanitize": "^2.2.0",
@@ -22,6 +27,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^5.13.21",
     "nodemailer": "^6.9.13",
+    "serverless-http": "^3.2.0",
     "slugify": "^1.6.6",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
@@ -35,6 +41,7 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
+    "parcel-bundler": "^1.12.5",
     "prettier": "^3.0.3"
   },
   "engines": {
