--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   functions = "netlify/functions"
-  command = "echo Building Functions"
+  command = "npm install && npm run build && echo Building Functions"
 [functions]
   external_node_modules = ["express"]
   node_bundler = "esbuild"
