--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
   functions = "netlify/functions"
-  command = "npm install && echo Building Functions"
+  command = "npm install && npm run build && echo Building Functions"
 [functions]
-  external_node_modules = ["express", "mongoose", "dotenv"] # Include any other necessary modules
+  external_node_modules = ["express", "mongoose", "dotenv", "serverless"] # Include any other necessary modules
   node_bundler = "esbuild" # Ensure you use esbuild for better performance
 [[redirects]]
   force = true
