--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "start": "node server.js",
     "dev": "nodemon server.js",
     "start:prod": "NODE_ENV=production nodemon server.js",
-    "debug": "ndb server.js",
-    "build": "parcel build server.js --out-dir dist"
+    "debug": "ndb server.js"
   },
   "keywords": [],
   "author": "",
