--- a/package.json
+++ b/package.json
@@ -18,15 +18,16 @@
     "@types/express": "^5.0.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.3.1",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^5.13.21",
+    "mongoose": "^5.13.22",
     "nodemailer": "^6.9.13",
+    "serverless": "^4.4.7",
     "serverless-http": "^3.2.0",
     "slugify": "^1.6.6",
     "validator": "^13.11.0",
